fix(upload-minio): fix minio upload object storage
